# MNN_demo

./: CMakeLists.txt  README.md  build_android.sh  usage_monitor_unroot.sh
libs/x86/: libMNN.dylib  libMNNTrain.dylib  libMNN_Express.dylib
src/: demo.cpp
